--- a/KungfuCombat/KungfuCombat.csproj
+++ b/KungfuCombat/KungfuCombat.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="IntroScreen.cs" />
+    <Compile Include="StateFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
