--- a/ttl/Octo.csproj
+++ b/ttl/Octo.csproj
@@ -38,6 +38,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IGameState.cs" />
+    <Compile Include="IStateCache.cs" />
+    <Compile Include="IStateFactory.cs" />
+    <Compile Include="StateCache.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
