--- a/ttl/Octo.csproj
+++ b/ttl/Octo.csproj
@@ -42,6 +42,7 @@
     <Compile Include="IStateCache.cs" />
     <Compile Include="IStateFactory.cs" />
     <Compile Include="StateCache.cs" />
+    <Compile Include="OctoGame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
