--- a/KungfuCombat/KungfuCombat.csproj
+++ b/KungfuCombat/KungfuCombat.csproj
@@ -68,4 +68,9 @@
       <Name>Octo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\title.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
